<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".MainActivity"
  >
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    >
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      >
      <ImageView
        android:id="@+id/menu_toggle"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_menu_black_24dp"
        android:contentDescription="@null"
        />
      <TextView
        android:id="@+id/title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="gone"
        />
    </RelativeLayout>
    <FrameLayout
      android:id="@+id/content_frame"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    </FrameLayout>
  </LinearLayout>
  <LinearLayout
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/menubg"
    android:orientation="vertical"
    >
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="250dp"
      >
      <ImageView
        android:id="@+id/header_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:background="@drawable/iconx"
        android:contentDescription="@null"
        />
      <TextView
        android:id="@+id/user_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_image"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        />
    </RelativeLayout>
    <RelativeLayout
      android:id="@+id/home"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/drawer_left_menu_selector"
      android:clickable="true"
      >
      <TextView
        style="@style/textview_style1"
        android:text="@string/home"
        />
      <include layout="@layout/draw_left_menu_imageview"/>
    </RelativeLayout>
    <include layout="@layout/draw_left_menu_devider"/>
    <RelativeLayout
      android:id="@+id/myproduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/drawer_left_menu_selector"
      android:clickable="true"
      >
      <TextView
        style="@style/textview_style1"
        android:text="@string/product"
        />
      <include layout="@layout/draw_left_menu_imageview"/>
    </RelativeLayout>
    <include layout="@layout/draw_left_menu_devider"/>
    <RelativeLayout
      android:id="@+id/mycollect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/drawer_left_menu_selector"
      android:clickable="true"
      >
      <TextView
        style="@style/textview_style1"
        android:text="@string/collect"
        />
      <include layout="@layout/draw_left_menu_imageview"/>
    </RelativeLayout>
    <include layout="@layout/draw_left_menu_devider"/>
    <RelativeLayout
      android:id="@+id/setting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/drawer_left_menu_selector"
      android:clickable="true"
      >
      <TextView
        android:id="@+id/changesetting"
        style="@style/textview_style1"
        android:text="@string/login"
        />
      <include layout="@layout/draw_left_menu_imageview"/>
    </RelativeLayout>
    <include layout="@layout/draw_left_menu_devider"/>
  </LinearLayout>
</android.support.v4.widget.DrawerLayout>
