<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
<com.scau.beyondboy.idgoods.view.SlideListView
  android:id="@+id/product_slidelistview"
  style="@style/slide_style"
  android:background="@android:color/transparent"
  />
  </RelativeLayout>