<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
      android:id="@+id/header_image"
      android:layout_marginTop="20dp"
      android:layout_centerHorizontal="true"
      android:layout_width="250dp"
      android:layout_height="170dp"
      android:scaleType="fitXY"
      />
    <TextView
      android:id="@+id/product_name"
      android:layout_below="@id/header_image"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"
      android:paddingTop="5dp"
      android:text="beyondboy"
      style="@style/text_style8"
      />
    <TextView
      android:id="@+id/adverse_serialnumber"
      android:layout_below="@id/product_name"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"
      android:paddingTop="5dp"
      android:text="12345678898"
      style="@style/text_style8"
      />
   <Button
     android:id="@+id/getcashbn"
     android:text="领取返现"
     style="@style/button_style1"
     />
  </RelativeLayout>
</LinearLayout>