<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/white"
    >
    <TextView
      android:id="@+id/textView"
      android:text="@string/info_person"
      android:textColor="@color/black"
      style="@style/text_style4"
      />
    <ImageView
      android:id="@+id/personinfo_back"
      android:src="@drawable/ic_navigate_black_24dp"
      style="@style/image_style1"
      android:contentDescription="@null"
      />
  </RelativeLayout>
  <ImageView
    android:id="@+id/header_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp"
    android:src="@drawable/iconx"
    android:contentDescription="@null"
    />
  <RelativeLayout
    android:id="@+id/nickname_layout"
    android:layout_below="@+id/header_image"
    android:layout_marginTop="50dp"
    style="@style/relativelayout_style1"
    >
    <TextView
      android:layout_alignParentLeft="true"
      android:text="@string/name"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
    <ImageView
      android:id="@+id/nickname_go"
      android:src="@drawable/ic_chevron_right_black_24dp"
      tools:ignore="RtlHardcoded"
      style="@style/imageview_style3"
      android:contentDescription="@null"
      />
    <TextView
      android:id="@+id/nickname"
      android:layout_centerVertical="true"
      android:layout_toLeftOf="@id/nickname_go"
      tools:text="123456789@qq.com"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
  </RelativeLayout>
  <ImageView
    android:layout_alignBottom="@+id/nickname_layout"
    android:contentDescription="@null"
    style="@style/image_style4"
    />
  <RelativeLayout
    android:id="@+id/email_layout"
    android:layout_below="@+id/nickname_layout"
    style="@style/relativelayout_style1"
    >
    <TextView
      android:layout_alignParentLeft="true"
      android:text="@string/email"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
    <ImageView
      android:id="@+id/email_go"
      android:src="@drawable/ic_chevron_right_black_24dp"
      tools:ignore="RtlHardcoded"
      style="@style/imageview_style3"
      android:contentDescription="@null"
      />
    <TextView
      android:id="@+id/email"
      android:layout_centerVertical="true"
      android:layout_toLeftOf="@id/email_go"
      tools:text="123456789@qq.com"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
  </RelativeLayout>
  <ImageView
    android:layout_alignBottom="@+id/email_layout"
    android:contentDescription="@null"
    style="@style/image_style4"
    />
  <RelativeLayout
    android:id="@+id/birthday_layout"
    android:layout_below="@+id/email_layout"
    android:layout_centerInParent="true"
    style="@style/relativelayout_style1"
    >
    <TextView
      android:layout_alignParentLeft="true"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      android:text="@string/birthday"
      style="@style/text_style7"
      />
    <ImageView
      android:id="@+id/birthday_go"
      android:src="@drawable/ic_chevron_right_black_24dp"
      tools:ignore="RtlHardcoded"
      style="@style/imageview_style3"
      android:contentDescription="@null"
      />
    <TextView
      android:id="@+id/birthday"
      android:layout_centerVertical="true"
      android:layout_toLeftOf="@id/birthday_go"
      tools:text="1990-09-07"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
  </RelativeLayout>
  <ImageView
    android:layout_alignBottom="@+id/birthday_layout"
    android:contentDescription="@null"
    style="@style/image_style4"
    />
  <RelativeLayout
    android:id="@+id/sex_layout"
    android:layout_below="@+id/birthday_layout"
    android:layout_centerInParent="true"
    style="@style/relativelayout_style1"
    >
    <TextView
      android:layout_alignParentLeft="true"
      android:text="@string/sex"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
    <ImageView
      android:id="@+id/sex_go"
      android:src="@drawable/ic_chevron_right_black_24dp"
      tools:ignore="RtlHardcoded"
      style="@style/imageview_style3"
      android:contentDescription="@null"
      />
    <TextView
      android:id="@+id/sex"
      android:layout_centerVertical="true"
      android:layout_toLeftOf="@id/sex_go"
      android:text="@string/man"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
  </RelativeLayout>
  <ImageView
    android:layout_alignBottom="@+id/sex_layout"
    android:contentDescription="@null"
    style="@style/image_style4"
    />
  <RelativeLayout
    android:id="@+id/address_layout"
    android:layout_below="@+id/sex_layout"
    android:layout_centerInParent="true"
    style="@style/relativelayout_style1"
    >
    <TextView
      android:layout_alignParentLeft="true"
      android:text="@string/address"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
    <ImageView
      android:id="@+id/address_go"
      android:src="@drawable/ic_chevron_right_black_24dp"
      tools:ignore="RtlHardcoded"
      style="@style/imageview_style3"
      android:contentDescription="@null"
      />
    <TextView
      android:id="@+id/address"
      android:layout_toLeftOf="@id/address_go"
      android:layout_centerVertical="true"
      tools:text="马栏山马栏村小谷围2号"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style7"
      />
  </RelativeLayout>
  <ImageView
    android:layout_alignBottom="@+id/address_layout"
    android:contentDescription="@null"
    style="@style/image_style4"
    />
</RelativeLayout>
