...
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:text="@string/choose_sex"
      android:layout_centerHorizontal="true"
      />
    <TextView
      android:id="@+id/comfirm"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="@dimen/x10"
      android:layout_alignParentRight="true"
      android:layout_marginRight="10dp"
      android:background="@drawable/button_bound"
      android:padding="5dp"
...
      android:id="@+id/man"
      android:button="@null"
      android:text="@string/man"
      style="@style/rediobutton_style1"
      />
    <RadioButton
      android:id="@+id/female"
      android:button="@null"
      android:text="@string/woman"
      style="@style/rediobutton_style1"
      />
  </RadioGroup>
</LinearLayout>
