<?xml version="1.0" encoding="utf-8"?>
<Button
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/save"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:background="@drawable/button_color_selector1"
  android:text="保存"
  android:textSize="20dp"
  tools:showIn="@layout/activity_change_email"
  />